# django-recyclebin

./: LICENSE  README.md  setup.cfg
django_recyclebin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
recyclebin/: apps.py  functions.py  models.py  utils.py
