[metadata]
name = django-recyclebin
version = 0.1
author = Abdul Raffay
author_email = abdulraffahmehtab@gmail.com
description = A Django app to make recyclebin.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 2.2
    djangorestframework >= 3.2