[metadata]
name = django-recyclebin
version = 0.2
author = Abdul Raffay
author_email = abdulraffahmehtab@gmail.com
description = A Django app to make recyclebin.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abraffay/django-recyclebin
project_urls =
    Bug Tracker = https://github.com/abraffay/django-recyclebin/issues
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 2.2
    djangorestframework >= 3.2